# cookieui

./: .gitignore  PATTERNS.md  README.md  TEMPLATING.md  pyproject.toml  requirements.txt
cookieui/: __init__.py  app.py  chrome.py  helpers.py  theme.py
cookieui/contrib/: __init__.py  filebrowser.py
cookieui/core/: __init__.py  event.py  screen.py  terminal.py
cookieui/widgets/: __init__.py  base.py  button.py  checkbox.py  dialog.py  label.py  listbox.py  progressbar.py  radiogroup.py  spinner.py  table.py  textinput.py  textview.py  window.py
examples/: commander.py  demo.py  envbrowser.py  file-copy-progress.py  filebrowsing.py  gitlog.py  html2pdf.py  processes.py  progressdemo.py  quickdialogs.py  spinnerdemo.py  sysinfo.py  themedemo.py  todo.py
recipe/: meta.yaml
screenshots/: generate.py
tests/: conftest.py  test_commander.py  test_dialogs.py  test_docs.py  test_examples.py  test_focus.py  test_page.py  test_rendering.py  test_run_task.py  test_screen.py  test_sizing.py  test_theming.py
